[Fix] Dark mode & Light mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,8 +6,11 @@
 }
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  /* --background: #ffffff;
+  --foreground: #171717; */
+
+  --background: #0a0a0a;
+  --foreground: #ededed;
 }
 
 @media (prefers-color-scheme: dark) {
